Add AsMapConfig class